# CollegeImprovement

./: College Improvement  PowerPoint.pptx  README.md  pyproject.toml
COLLEGEIMPROVEMENT/: analysis.py  coefficient_analysis.py  data_explore.py  data_reader.py  error_evalulation.py  evaluation.py  get_scores.py  grid_search.py  predict.py  regression.py  regression3.py  scatterplot.py  score_calc.py
COLLEGEIMPROVEMENT/models/: XGBoost.py  linear_regression  linear_regression.py  random_forest.py  regression.py  regression2.py  regression3.py  regression4.py  regression5.py  support_vector_machine  support_vector_machine.py
COLLEGEIMPROVEMENT/models/Experiments/: regression3.py
COLLEGEIMPROVEMENT/models/Failed Experiments/: simple_knn_impute_predictor.py
COLLEGEIMPROVEMENT/models/scripts/: XGBoost.py  XGBoost_default.py  linear_regression.py  random_forest.py  support_vector_machine.py
